--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "index-selection"]
 	path = index-selection
-	url = git@github.com:pganalyze/pgcon2023.git
+	url = git@github.com:pganalyze/pgday-chicago-2024.git
